Adds group members names.

--- a/Pacman Search.ipynb
+++ b/Pacman Search.ipynb
@@ -5,7 +5,16 @@
    "metadata": {},
    "source": [
     "# PacMan\n",
+    "## Integrantes do Grupo\n",
+    "146318 Guilherme Rodrigues Bueno\n",
     "\n",
+    "146388 Heitor Banhete Raymundo\n",
+    "\n",
+    "163993 Anderson Nogueira Cotrim\n",
+    "\n",
+    "166597\tDiego Yutaka Kamiha\n",
+    "\n",
+    "188802 Yuri Luiz de Oliveira\n",
     "## Restrições para análise do projeto\n",
     "\n",
     "- Não são permitidos movimentos na **diagonal**, apenas, **cima**, **baixo**, **esquerda** e **direita**.\n",
@@ -3353,7 +3362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.5"
   },
   "mimetype": "text/x-python",
   "name": "python",
