Rodando os testes de replacement novamente

--- a/prj2/Experiments.ipynb
+++ b/prj2/Experiments.ipynb
@@ -129,15 +129,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Bibliografia\n",
+    "1. https://web.stanford.edu/class/cs231a/prev_projects_2015/JordanDavidson.pdf\n",
+    "\n",
+    "\n",
+    "# Divisão das tarefas\n",
+    "\n",
+    "|           | Setup | Seleção | Crossover | Mutação | Replacement | Funções de acompanhamento | Relatório |\n",
+    "|-----------|-------|---------|-----------|---------|-------------|---------------------------|-----------|\n",
+    "| Anderson  |   X   |         |     X     |         |             |            X              |     X     |\n",
+    "| Diego     |       |         |     X     |         |             |                           |     X     |\n",
+    "| Guilherme |       |         |           |         |      X      |            X              |     X     |\n",
+    "| Heitor    |       |         |           |    X    |             |                           |     X     |\n",
+    "| Yuri      |       |    X    |           |         |             |                           |     X     |"
+   ]
   }
  ],
  "metadata": {
