Analisando resultados random forest

--- a/prj3/RandomForest.ipynb
+++ b/prj3/RandomForest.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "## Melhores parametros encontrados\n",
     "Conforme análises abaixo, o melhor resultado obtido com o método Random Forest foi utilizando os seguintes parametros: \\\n",
-    "**Pipeline(steps=[('random', RandomForestClassifier(class_weight='balanced', max_depth=10, max_features=0.6))])**"
+    "**Pipeline(steps=[('random', RandomForestClassifier(max_depth=10, max_features=0.6))])**"
    ]
   },
   {
